// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Auth should get a person token 1`] = `"some token"`;

exports[`Auth should get a person token 2`] = `
Array [
  Array [
    "People/GetCurrentPersonImpersonationToken?expireDateTime=2016-12-28T23:36:07.071Z",
    Object {},
    Object {
      "headers": Object {
        "Authorization-Token": null,
        "cookie": "some cookie",
      },
    },
  ],
]
`;

exports[`Auth should post when creating a new user 1`] = `1`;

exports[`Auth should post when creating a new user 2`] = `
Array [
  Array [
    Object {
      "Email": "bob-jones@example.com",
    },
  ],
]
`;

exports[`Auth should post with userProfile fields when creating a new user 1`] = `"some-cookie"`;

exports[`Auth should post with userProfile fields when creating a new user 2`] = `
Array [
  Array [
    Object {
      "Email": "bob-jones@example.com",
      "FirstName": "Burke",
      "LastName": "Shartsis",
    },
  ],
]
`;

exports[`Auth should post with userProfile fields when creating a new user and map gender/birthdate 1`] = `"some-cookie"`;

exports[`Auth should post with userProfile fields when creating a new user and map gender/birthdate 2`] = `
Array [
  Array [
    Object {
      "BirthDate": "1996-02-22T05:00:00.000Z",
      "Email": "bob-jones@example.com",
      "FirstName": "Burke",
      "Gender": "Female",
      "LastName": "Shartsis",
    },
  ],
]
`;

exports[`Auth should throw an error when creating an invalid user 1`] = `
Array [
  Array [
    Object {
      "Email": "bob-jones@example.com",
    },
  ],
]
`;

exports[`Auth should throw an error when creating an invalid user 2`] = `[Error: Unable to create profile!]`;
